--- a/src/components/LatestPosts.astro
+++ b/src/components/LatestPosts.astro
@@ -27,6 +27,7 @@ const formattedPosts = formatBlogPost(allPosts, {
         date={post.data.date}
         href={post.slug}
         title={post.data.title}
+        description={post.data.description}
       />
     ))
   }
