--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,6 +7,7 @@ import Marquee from '../components/Marquee.astro';
 import MorePost from '../components/MorePost.astro';
 import LatestPosts from '../components/LatestPosts.astro';
 import Name from '../components/Name.tsx';
+import SocialLink from '../components/SocialLink.astro'
 
 import { formatBlogPost } from '../js/utils';
 import { Icon } from 'astro-icon';
@@ -25,26 +26,13 @@ const secondaryPosts = [feature2, feature3];
 
 <BaseLayout pageTitle={pageTitle}>
   <div class="intro">
-    <Marquee />
-
-    <!-- <h1 class="name">Trevor Lee</h1> -->
 
     <Name client:load/>
-
     <p class="desc">Digital designer and web developer</p>
-    <div class="icons">
-      <a class='wavy-exempt icon' href="https://github.com/boogerbuttcheeks" aria-label="Go to Trevor's Github page">
-        <Icon name="ant-design:github-filled" size="40" />
-      </a>
-      <a class='wavy-exempt icon' href="https://www.linkedin.com/in/trevortylerlee/" aria-label="Go to Trevor's LinkedIn page">
-        <Icon name="ri:linkedin-fill" size="40" />
-      </a>
-      <a class='wavy-exempt icon' href="https://twitter.com/boogerbuttcheek" aria-label="Go to Trevor's Twitter page">
-        <Icon name="ri:twitter-fill" size="40" />
-      </a>
-    </div>
+
   </div>
   <hr />
+  <div>
   {
     featuredPost.map((post) => (
       <Card
@@ -53,9 +41,11 @@ const secondaryPosts = [feature2, feature3];
         href={post.slug}
         src={post.data.image.src}
         alt={post.data.image.alt}
+        featured={true}
       />
     ))
   }
+  </div>
   <div class="secondary-posts">
   {
     secondaryPosts.map((post) => (
@@ -65,6 +55,7 @@ const secondaryPosts = [feature2, feature3];
         href={post.slug}
         src={post.data.image.src}
         alt={post.data.image.alt}
+        featured={false}
       />
     ))
   }
@@ -87,6 +78,7 @@ const secondaryPosts = [feature2, feature3];
   .desc {
     margin: 0;
     text-align: center;
+    transition: 0s;
   }
 
   .desc {
@@ -94,22 +86,26 @@ const secondaryPosts = [feature2, feature3];
   }
   
   .intro {
-    /* outline: 2px solid blue; */
+    /* outline: 2px solid orange; */
     padding: 2rem 0;
   }
 
   .icons {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    max-width: 400px;
     margin-top: 2rem;
-    gap: 2rem;
+    margin: 0 auto;
+    outline: 2px solid red;
   }
 
-  .icon:hover,
-  .icon:focus {;
-    transform: scale(1.02);
-    color: var(--primary-color);
+  .social-grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 0.5rem;
+    margin: 0 auto;
+    margin-top: 2rem;
+    max-width: 420px;
   }
 
   h2 {
@@ -119,23 +115,6 @@ const secondaryPosts = [feature2, feature3];
   marquee {
     display: flex;
     margin: 0;
-  }
-
-  path {
-    pointer-events: all;
-    cursor: pointer;
-  }
-
-  svg {
-    transition: 0.2s;
-  }
-
-  svg:hover,
-  svg:focus,
-  svg:focus-visible,
-  svg:focus-within,
-  svg:active {
-    transform: scale(1.02);
   }
 
   @media (min-width: 760px) {
