--- a/src/components/Marquee.astro
+++ b/src/components/Marquee.astro
@@ -30,7 +30,7 @@
     position: relative;
     animation: scroll 24s linear infinite;
     width: 100%;
-    /* outline: 2px solid red; */
+    /* outline: 2px solid blue; */
   }
   
   .wrapper img {
