--- a/src/components/MorePost.astro
+++ b/src/components/MorePost.astro
@@ -35,13 +35,17 @@ const { date, href, title, description, last } = Astro.props;
   }
 
   a:hover .wrapper {
-    transform: scale(1.02);
-    box-shadow: 0 0 1rem var(--darkGlow);
+    /* transform: scale(1.02);
+    box-shadow: 0 0 1rem var(--darkGlow); */
+    background: #e9e9e9;
+    outline: 2px dotted var(--primary-color);
   }
 
   a:focus .wrapper {
-    transform: scale(1.02);
-    box-shadow: 0 0 1rem var(--darkGlow);
+    /* transform: scale(1.02);
+    box-shadow: 0 0 1rem var(--darkGlow); */
+    background: #e9e9e9;
+    outline: 2px dotted var(--primary-color);
   }
 
   a:hover p {
@@ -55,25 +59,26 @@ const { date, href, title, description, last } = Astro.props;
   }
 
   :global(.dark) a:hover .wrapper {
-    transform: scale(1.02);
-    box-shadow: 0 0 1rem var(--lightGlow);
+    /* transform: scale(1.02);
+    box-shadow: 0 0 1rem var(--lightGlow); */
+    background: #333;
   }
 
   :global(.dark) a:focus .wrapper {
-    transform: scale(1.02);
-    box-shadow: 0 0 1rem var(--lightGlow);
+    /* transform: scale(1.02);
+    box-shadow: 0 0 1rem var(--lightGlow); */
+    background: #333;
   }
 
   a:hover h4,
   a:focus h4 {
-    color: var(--primary-color);
+    /* color: var(--primary-color); */
   }
 
   .wrapper {
-    background: var(--lightBg);
+    /* background: var(--lightBg); */
     border-radius: 8px;
     padding: 0.75rem;
-    transition: 0.2s;
   }
 
   .post {
@@ -83,7 +88,7 @@ const { date, href, title, description, last } = Astro.props;
   }
 
   :global(.dark) .wrapper {
-    background: var(--darkBg);
+    /* background: var(--darkBg); */
   }
 
   .date {
@@ -96,7 +101,12 @@ const { date, href, title, description, last } = Astro.props;
   }
 
   .container {
-    /* outline: 2px solid red; */
+    border-radius: 0.5rem;
+    background: #e9e9e9;
+  }
+
+  :global(.dark) .container {
+    background: #333;
   }
 
   .title {
