navigation change to blue ball and circle

--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -65,6 +65,10 @@ const darkGlow = '#0000FF';
     outline: 2px dotted var(--primary-color);
   }
 
+  :global(.dark) a:focus .featured {
+    background: #333;
+  }
+
   p {
     margin: 0;
   }
