--- a/src/components/MorePost.astro
+++ b/src/components/MorePost.astro
@@ -37,14 +37,14 @@ const { date, href, title, description, last } = Astro.props;
   a:hover .wrapper {
     /* transform: scale(1.02);
     box-shadow: 0 0 1rem var(--darkGlow); */
-    background: #e9e9e9;
+    background: #fff;
     outline: 2px dotted var(--primary-color);
   }
 
   a:focus .wrapper {
     /* transform: scale(1.02);
     box-shadow: 0 0 1rem var(--darkGlow); */
-    background: #e9e9e9;
+    background: #fff;
     outline: 2px dotted var(--primary-color);
   }
 
@@ -102,7 +102,7 @@ const { date, href, title, description, last } = Astro.props;
 
   .container {
     border-radius: 0.5rem;
-    background: #e9e9e9;
+    background: #fff;
   }
 
   :global(.dark) .container {
