--- a/src/components/SocialLink.astro
+++ b/src/components/SocialLink.astro
@@ -22,7 +22,7 @@ const { link, icon, name } = Astro.props
   }
 
   .icon:hover {
-    background: #dcdcdc;
+    background: #e9e9e9;
     outline: 2px dotted var(--primary-color);
   }
 
@@ -32,7 +32,7 @@ const { link, icon, name } = Astro.props
 
   .icon:focus {
     outline: 2px dotted var(--primary-color);
-    background: #dcdcdc;
+    background: #e9e9e9;
   }
 
   :global(.dark) .icon:focus {
