--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -4,22 +4,21 @@ const light = '#e9e9e9';
 const dark = '#333';
 ---
 
-<a href={`/posts/${href}/`} rel="prefetch">
-  <div class={`card ${featured ? 'featured' : ''}`}>
-    <img src={src} alt={alt} />
-    <h3 class="title">
-      {title}
-    </h3>
-    <p>{desc}</p>
-  </div>
-</a>
+  <a href={`/posts/${href}/`} rel="prefetch">
+    <div class={`card ${featured ? 'featured' : ''}`} tabIndex="-1">
+      <img src={src} alt={alt} />
+      <h3 class="title">
+        {title}
+      </h3>
+      <p>{desc}</p>
+    </div>
+  </a>
 
 <style define:vars={{ light, dark }}>
   .card {
     cursor: pointer;
     padding: 1rem;
     height: 100%;
-    transition: 0s;
     border-radius: 0.5rem;
 
     -webkit-user-select: none; /* Safari */
@@ -28,47 +27,35 @@ const dark = '#333';
     user-select: none; /* Standard */
   }
 
-  .card:hover {
-    background: var(--light);
-    outline: 2px dotted var(--primary-color);
-  }
-
-  :global(.dark) .card:hover {
-    background: var(--dark);
-  }
-
+  a,
+  a:hover,
   a:focus {
-    outline: 2px dotted var(--primary-color);
-    background: var(--light);
+    outline: none;
   }
 
-  :global(.dark) a:focus {
-    background: var(--dark);
-  }
-
-  a:focus .featured {
-    background: var(--light);
+  a:hover .card,
+  a:focus .card,
+  a:focus-visible .card {
+    background-color: var(--light);
     outline: 2px dotted var(--primary-color);
   }
 
-  :global(.dark) a:focus .featured {
-    background: var(--dark);
+  :global(.dark) a:hover .card,
+  :global(.dark) a:focus .card,
+  :global(.dark) a:focus-visible .card {
+    background-color: var(--dark);
   }
 
   p {
     margin: 0;
   }
 
-  a {
-    color: inherit;
+  a,
+  a:hover {
     border-bottom: none;
     background-image: none !important;
     background-size: auto 4px;
     padding-bottom: 4px;
-  }
-
-  a:hover {
-    background-image: none !important;
   }
 
   .title {
@@ -79,7 +66,7 @@ const dark = '#333';
 
   @media (min-width: 40rem) {
     .card {
-      margin: 1rem 0;
+      /* margin: 1rem 0; */
     }
 
     .title {
