--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -24,6 +24,7 @@ const lightModeColor = '#0000FF';
   img {
     width: 48px;
     height: 48px;
+    border-radius: 0;
   }
 
   a {
@@ -35,7 +36,6 @@ const lightModeColor = '#0000FF';
   a:focus {
     color: var(--lightModeColor);
     outline: 2px dotted var(--primary-color);
-    border-radius: 100rem;
   }
 
   :global(.dark) a {
