--- a/src/components/SocialLink.astro
+++ b/src/components/SocialLink.astro
@@ -1,19 +1,18 @@
 ---
 import Icon from 'astro-icon'
 
-const { link, icon, name } = Astro.props
+const { link, icon, name, color, github} = Astro.props
 ---
 
 <a class='icon wavy-exempt' href={link}>
-  <Icon name={icon} size="44" />
-  {name}
+  <Icon name={icon} size="44" color={color ? color : ''} class={github ? 'github' : ''}/>
+  {name ? name : ''}
 </a>
 
 <style>
 
   .icon {
     all: unset;
-    padding: 0.5rem 1rem !important;
     display: flex;
     align-items: center;
     gap: 0.5rem;
@@ -21,22 +20,23 @@ const { link, icon, name } = Astro.props
     border-radius: 0.5rem;
   }
 
-  .icon:hover {
-    background: #e9e9e9;
-    outline: 2px dotted var(--primary-color);
-  }
-
-  :global(.dark) .icon:hover {
-    background: #333;
-  }
-
+  .icon:hover,
   .icon:focus {
-    outline: 2px dotted var(--primary-color);
     background: #e9e9e9;
+    outline: 2px dotted var(--primary-color);
   }
 
+  :global(.dark) .icon:hover,
   :global(.dark) .icon:focus {
     background: #333;
-    outline: 2px dotted var(--primary-color);
+  }
+
+  /* For Github */
+  .github {
+    color: #333;
+  }
+
+  :global(.dark) .github {
+    color: #fafafa;
   }
 </style>
