--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -46,7 +46,6 @@ const blueLink = '#0000FF';
     font-weight: 400;
     color: black;
     border-bottom: 2px solid transparent;
-    margin-top: 1em;
   }
 
   :global(.dark) a {
@@ -57,5 +56,6 @@ const blueLink = '#0000FF';
     display: flex;
     justify-content: center;
     gap: 1rem;
+    margin-top: 2rem;
   }
 </style>
