--- a/src/styles/CopyButton.module.css
+++ b/src/styles/CopyButton.module.css
@@ -16,7 +16,7 @@ button {
   transition: 0.2s;
   color: black;
   transform: scale(1);
-  cursor: pointer;
+  cursor: copy;
   font-family: "Inter", sans-serif;
   font-weight: normal;
 }
