intro color on hover

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -97,7 +97,11 @@ const secondaryPosts = [feature2, feature3];
   }
 
   .desc:hover {
-    color: var(--text-color);
+    color: #ff0080;
+  }
+
+  :global(.dark) .desc:hover {
+    color: #fff500;
   }
 
   .name {
