--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -66,7 +66,7 @@ const lightModeColor = '#0000FF';
   }
 
   .animate {
-    animation: spin 1s cubic-bezier(0.19, 1, 0.22, 1) forwards;
+    animation: spin 1s cubic-bezier(.6,1.59,.92,.91) forwards;
   }
 
   @keyframes spin {
@@ -87,7 +87,7 @@ const lightModeColor = '#0000FF';
         target.classList.remove('animate')
       }
     }, {
-      threshold: 1,
+      threshold: 0.75,
     })
 
     observer.observe(target)
