lower client directive priority and reduce motion

--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -6,8 +6,8 @@ import CopyButton from '../components/CopyButton';
 <div class="contact">
   <h2 class="color">Contact Me</h2>
   <div class="btn-wrapper">
-    <CopyButton client:idle message="trevortylerlee@gmail.com" />
-    <CopyButton client:idle message="778-235-3815" />
+    <CopyButton client:visible message="trevortylerlee@gmail.com" />
+    <CopyButton client:visible message="778-235-3815" />
   </div>
 </div>
 
