--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -66,7 +66,13 @@ const lightModeColor = '#0000FF';
   }
 
   .animate {
-    animation: spin 1s cubic-bezier(.6,1.59,.92,.91) forwards;
+    animation: spin 0.8s cubic-bezier(0,.69,.22,1.14) forwards;
+  }
+
+  @media (prefers-reduced-motion: reduce) {
+    .animate {
+      animation: none;
+    }
   }
 
   @keyframes spin {
